--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.12.1",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.42.5",
     "next": "14.2.1",
+    "prisma": "^5.12.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0"
